# lard

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  codebase-map.md  docker-compose.yml
.agents/rules/: workspace-role.md
backend/: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  run.sh  start-backend.sh  start-prod.sh  test_description_completeness.py  test_description_retries.py  test_graph_init_clean.py  test_validator_reasoning.py
backend/ai/: assistant.py  chains.py  debug.py  graph.py  llm_factory.py  logger.py  prompts.py  status.py
backend/data/tmp/: logic_verification.txt
backend/database/: models.py  relational.py  vector_store.py
backend/routers/: ai.py  jobs.py  settings.py
backend/test/: audit_emails.py
backend/test/experiments/: verify_retry_and_breaker.py
backend/utils/: pdf_generator.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package-lock.json.bak  package.json  package.json.bak
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/proxy/[...path]/: route.ts
frontend/src/components/: AddJobModal.tsx  AppShell.tsx  AutoSaveIndicator.tsx  ChatAssistant.tsx  ConfirmDialog.tsx  DocumentPreview.tsx  DocumentViewer.tsx  FilterPopover.tsx  JobCard.tsx  JobDetailView.tsx  KanbanBoard.tsx  Portal.tsx  ProcessingOverlay.tsx  SettingsPage.tsx  TableView.tsx  Ticker.tsx  Tooltip.tsx
frontend/src/lib/: SettingsContext.tsx  ViewContext.tsx  actions.ts  api.ts  constants.ts  utils.ts
